--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,3 +5,11 @@
 .mat-toolbar .mat-flat-button {
   height: 50px;
 }
+
+.mat-toolbar {
+  height: 50px;
+  position: sticky;
+  position: -webkit-sticky; /* For macOS/iOS Safari */
+    top: 0; /* Sets the sticky toolbar to be on top */
+    z-index: 1000;
+}
