--- a/src/app/tasks/task-edit/task-edit.component.html
+++ b/src/app/tasks/task-edit/task-edit.component.html
@@ -1,1 +1,26 @@
-<p>task-edit works!</p>
+<div>
+  <h1 mat-dialog-title>Create Task</h1>
+  <div mat-dialog-content>
+    <div>
+      <mat-form-field>
+        <mat-label>Title</mat-label>
+        <input matInput placeholder="title" />
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field>
+        <mat-label>Description</mat-label>
+        <textarea
+          matInput
+          cdkAutosizeMinRows="2"
+          cdkAutosizeMaxRows="5"
+          placeholder="description"
+        ></textarea>
+      </mat-form-field>
+    </div>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button mat-dialog-close (click)="onAdd()">Add</button>
+    <button mat-button mat-dialog-close>Discard</button>
+  </div>
+</div>
