--- a/src/app/tasks/task-list/task-item/task-item.component.html
+++ b/src/app/tasks/task-list/task-item/task-item.component.html
@@ -1,33 +1,25 @@
-<div>
-  <div
-    fxLayout="row"
-    style="padding: 0px 10px 0px 10px; border: 1px solid black;"
-  >
-    <div
-      fxFlex="50%"
-      fxLayoutAlign="start center"
-      style="height: 100px; border: 1px solid black;"
-    >
-      {{ task.title }}
-    </div>
-    <div
-      fxFlex="25%"
-      fxLayoutAlign="start center"
-      style="height: 100px; border: 1px solid black;"
-    >
-      {{ task.dueBy }}
-    </div>
-    <div
-      fxFlex="25%"
-      fxLayoutAlign="end center"
-      style="height: 100px; border: 1px solid black;"
-    >
-      <button mat-icon-button>
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button>
-        <mat-icon>delete</mat-icon>
-      </button>
-    </div>
-  </div>
-</div>
+<mat-card
+  [ngClass]="{ 'mat-elevation-z2': true, completed: task.completed }"
+  [ngStyle.gt-xs]="{ width: '400px' }"
+>
+  <mat-card-title>
+    {{ task.title }}
+  </mat-card-title>
+  <mat-card-content>
+    <p>{{ task.description }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-icon-button color="primary">
+      <mat-icon *ngIf="task.completed" (click)="toggleCompletion(task)"
+        >check_circle</mat-icon
+      >
+      <mat-icon *ngIf="!task.completed" (click)="toggleCompletion(task)"
+        >check_circle_outline</mat-icon
+      >
+    </button>
+    <button mat-icon-button color="basic"><mat-icon>edit</mat-icon></button>
+    <button mat-icon-button color="basic" (click)="onDelete()">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </mat-card-actions>
+</mat-card>
