end of day commit

--- a/src/app/tasks/task-list/task-item/task-item.component.html
+++ b/src/app/tasks/task-list/task-item/task-item.component.html
@@ -1,4 +1,4 @@
-<mat-card
+<!-- <mat-card
   [ngClass]="{ 'mat-elevation-z2': true, completed: task.completed }"
   [ngStyle.gt-xs]="{ width: '400px' }"
 >
@@ -22,4 +22,6 @@
       <mat-icon>delete</mat-icon>
     </button>
   </mat-card-actions>
-</mat-card>
+</mat-card> -->
+<div></div>
+1
