--- a/src/app/tasks/task-list/task-item/task-item.component.css
+++ b/src/app/tasks/task-list/task-item/task-item.component.css
@@ -1,8 +1,24 @@
-.mat-card {
-  margin: 6px;
-}
-
 .completed {
   color: grey;
   text-decoration: line-through;
+}
+
+.task-title {
+  color: rba(0, 0, 0, 0.87);
+  font-size: 14px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+}
+
+.task-action-buttons {
+  color: rba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+}
+
+.task-move-handle {
+  cursor: move;
 }
