--- a/src/app/tasks/task-list/task-item/task-item.component.css
+++ b/src/app/tasks/task-list/task-item/task-item.component.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .task-move-handle {
