--- a/src/app/tasks/task-list/task-list.component.css
+++ b/src/app/tasks/task-list/task-list.component.css
@@ -1,15 +1,13 @@
 .task-list-container {
- /* display: flex; */
- /* justify-content: center; */
- /* align-self: center; */
- /* align-items: center; */
+ display: flex;
+ justify-content: center;
  margin-top: 20px;
  margin-bottom: 80px;
 
 }
 
 .task-list {
-  width: 500px;
+  min-width: 350px;
   max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
