--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -1,54 +1,56 @@
-<div class="task-list-container">
-  <div>
-    <div class="task-list" cdkDropList (cdkDropListDropped)="drop($event)">
-      <div class="task-item" *ngFor="let task of taskList" cdkDrag>
-        <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
-        <div class="task-title-wrapper">
-          <div class="task-status-icon">
-            <button
-              mat-icon-button
-              *ngIf="!task.completed"
-              (click)="onTaskStatusToggle(task)"
+<div fxLayout="row" fxLayoutAlign="center center">
+  <div class="task-list-container" fxFlex>
+    <div>
+      <div class="task-list" cdkDropList (cdkDropListDropped)="drop($event)">
+        <div class="task-item" *ngFor="let task of taskList" cdkDrag>
+          <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
+          <div class="task-title-wrapper">
+            <div class="task-status-icon">
+              <button
+                mat-icon-button
+                *ngIf="!task.completed"
+                (click)="onTaskStatusToggle(task)"
+              >
+                <mat-icon>check_circle_outline</mat-icon>
+              </button>
+              <button
+                color="accent"
+                mat-icon-button
+                *ngIf="task.completed"
+                (click)="onTaskStatusToggle(task)"
+              >
+                <mat-icon>check_circle</mat-icon>
+              </button>
+            </div>
+            <div
+              class="task-title"
+              [ngClass]="{ 'completed-task': task.completed }"
             >
-              <mat-icon>check_circle_outline</mat-icon>
-            </button>
-            <button
-              color="accent"
-              mat-icon-button
-              *ngIf="task.completed"
-              (click)="onTaskStatusToggle(task)"
-            >
-              <mat-icon>check_circle</mat-icon>
-            </button>
+              {{ task.title }}
+            </div>
           </div>
-          <div
-            class="task-title"
-            [ngClass]="{ 'completed-task': task.completed }"
-          >
-            {{ task.title }}
-          </div>
-        </div>
-        <div class="task-action-buttons">
-          <button mat-icon-button (click)="launchTaskDetails(task)">
-            <mat-icon>launch</mat-icon>
-          </button>
-          <div cdkDragHandle>
-            <button class="task-move-handle" mat-icon-button>
-              <mat-icon>unfold_more</mat-icon>
+          <div class="task-action-buttons">
+            <button mat-icon-button (click)="launchTaskDetails(task)">
+              <mat-icon>launch</mat-icon>
             </button>
+            <div cdkDragHandle>
+              <button class="task-move-handle" mat-icon-button>
+                <mat-icon>unfold_more</mat-icon>
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <button
+      mat-fab
+      class="fab-button elevation-z8"
+      color="accent"
+      aria-label="Example icon button with a bookmark icon"
+      class="fab-button"
+      (click)="openTaskCreate()"
+    >
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
-  <button
-    mat-fab
-    class="fab-button elevation-z8"
-    color="accent"
-    aria-label="Example icon button with a bookmark icon"
-    class="fab-button"
-    (click)="openTaskCreate()"
-  >
-    <mat-icon>add</mat-icon>
-  </button>
 </div>
