--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,12 @@
       <button
         mat-icon-button
         class="example-icon favorite-icon"
-        aria-label="Example icon-button with heart icon"
+        (click)="onLogout()"
+        *ngIf="isLoggedIn"
       >
+        <mat-icon>login</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon favorite-icon">
         <mat-icon>more_vert</mat-icon>
       </button>
     </div>
